--- a/static/styles/main-table.css
+++ b/static/styles/main-table.css
@@ -94,7 +94,7 @@
 }
 .voting-table .col6 {
     width: 150px;
-    max-width: 200px;
+    max-width: 150px;
 }
 .voting-table .col7 {
     width: 65px;
